# music-player

./: .gitignore  LICENSE  README.md  database.db  package.json
client/: .env  index.html  package.json  vite.config.ts
client/src/: App.tsx  api.ts  context.ts  events.ts  main.tsx  reducer.ts  router.tsx  socket.ts
client/src/components/: Album.tsx  Loading.tsx  NoResult.tsx  PlayButton.tsx  Player.tsx  Popup.tsx  Queue.tsx  Searchbar.tsx  Song.tsx  index.ts
client/src/pages/: index.ts
client/src/providers/: artist.provider.ts  genre.provider.ts  song.provider.ts
client/src/styles/: app.styled.ts  cover.styled.ts  form.styled.ts  global.ts  home.content.styled.ts  home.overview.styled.ts  (+4 more)
node-server/: app.ts  package.json  test.db
server/: Cargo.toml  database.db  tarpaulin-report.html  tauri.conf.json
server/node/: .env  .env.example  nodemon.json  package.json
server/node/src/: app.ts  cache.ts  func.ts  index.ts  models.ts  state.ts
server/node/src/controllers/: album.ts  artist.ts  genre.ts  image.ts  index.ts  playback.ts  queue.ts  song.ts
server/src/: consts.rs  database.rs  func.rs  main.rs  query.rs  server.rs  types.rs
server/src/database/: func.rs  mod.rs  traits.rs
server/src/lyric_scraper/: azlyrics.rs  genius.rs  mod.rs
server/src/server/controllers/: album.rs  artist.rs  audio.rs  genre.rs  image.rs  lyrics.rs  mod.rs  playback.rs  queue.rs  song.rs  status.rs  ws.rs
server/src/server/database/: func.rs  mod.rs  model.rs
server/src/server/web_socket/: lobby.rs  messages.rs  mod.rs  ws.rs
src-tauri/: tauri.conf.json
(+22 files in other folders)
