[package]
name = "app"
version = "0.1.0"
description = "Music player for desktop"
authors = ["acf-patrick"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
sha256 = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-open", "protocol-asset"] }
tauri-api = "0.7.6"
lofty = "0.14.0"
indicatif = "0.17.3"
actix = "0.13"
actix-web-actors = "4.1"
actix-web = "4"
actix-cors = "0.6.4"
actix-files = "0.6.2"
serde_rusqlite = "0.33.1"
scraper = "0.16.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
unidecode = "0.3.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled", "blob"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
